--- a/code/style.css
+++ b/code/style.css
@@ -19,7 +19,7 @@ a{color:white; text-decoration:none; cursor:pointer; }
 a:hover {cursor:pointer !important;}
 /* input, select, textarea { -webkit-appearance: none; -moz-appearance: none; appearance: none; border:0; margin:0; font-family:'Roboto', Helvetica, Arial, sans-serif; padding:10px 15px; box-sizing: border-box; border-radius:10px; background:white; color: var(--dark); font-size:16px; font-weight:700;} */
 select {cursor:pointer;}
-::placeholder {color: grey;}
+::placeholder {color: grey; font-weight:500;}
 .btn{ background:var(--blue); color:white; border-radius:25px; cursor:pointer; line-height: 100%; text-align:center; font-size:16px; display:block; padding: 15px 30px; display:inline-block; }
 .btn:hover{background:white !important; color:black !important; cursor:pointer !important; }
 .opacite {opacity:0.35;}
@@ -27,10 +27,10 @@ select {cursor:pointer;}
 
 .derouler {background:rgb(40, 40, 42); margin-bottom:10px; border-radius:15px;}
 .derouler .top {display:flex; justify-content: space-between; align-items: center; padding:15px 0; -webkit-user-select: none; -ms-user-select: none; user-select: none; }
-.derouler .top:hover {background:rgb(35,35,37); border-radius:15px; cursor:pointer; }
+.derouler .top:hover { cursor:pointer; }
 .derouler .top span {text-align:left; margin-right:10px;}
 .derouler .image {vertical-align:middle; width:15px;}
-.derouler .contenu {padding:10px 15px 10px 15px; text-align:left; font-weight:500; }
+.derouler .contenu {padding:0 15px 10px 15px; text-align:left; font-weight:500; }
 .derouler .contenu .radio {background:transparent; border:solid 2px white; color:white; padding:10px 15px; margin:15px 0; }
 .derouler .contenu .radio.selected { border:solid 2px var(--blue); }
 .derouler .contenu, .derouler .cacher {display:none;}
@@ -187,28 +187,28 @@ select {cursor:pointer;}
 /* faq ------------------------------------------------- */
 #faq .derouler {width:900px; margin-left:auto; margin-right:auto;}
 #faq .derouler .top {font-size:18px; padding:15px 20px;}
-#faq .derouler .contenu {padding:20px 30px;}
+#faq .derouler .contenu {padding:0 20px 15px 20px;}
 
 @media screen and (max-width: 950px) { 
 #faq .derouler {width:90%;}
 }
 
 /* contact -------------------------------------------- */
-#contact input, #contact select, #contact textarea { -webkit-appearance: none; -moz-appearance: none; appearance: none; border:0; margin:0; font-family:'Roboto', Helvetica, Arial, sans-serif; padding:15px 20px; box-sizing: border-box; border-radius:10px; background:white; color: black; font-size:15px; font-weight:700; }
-#contact {width:800px; margin:0 auto; text-align:center; }
-#contact .grandtitre {text-align:center; font-size:55px; width:570px; margin:130px auto 70px auto; line-height: 110%; }
-#form input, #form textarea { margin:5px; }
-#form .prenom, #form .nom, #form .telephone, #form .email {width:345px; }
-#form .message {width:700px; height:200px;}
-#form .btn {background:var(--blue); font-size:16px; color:white; border-radius:25px; padding: 15px 30px; }
-#contact .feedback{ display:none; width:665px; color:var(--green); font-size:18px; margin:20px auto; }
+#contact input, #contact select, #contact textarea { -webkit-appearance: none; -moz-appearance: none; appearance: none; border:0; margin:0; font-family:'Roboto', Helvetica, Arial, sans-serif; padding:15px 15px; box-sizing: border-box; border-radius:10px; background:white; color: black; font-size:15px; font-weight:700; }
+#contact {width:100%; margin:0 auto; text-align:center;  }
+#contact .grandtitre { width:400px; vertical-align:middle; display:inline-block; margin-right:40px; text-align:left; font-size:65px; line-height: 110%; margin-bottom:10px;  }
+#contact #image {width:300px; display:inline-block; vertical-align:middle; margin:100px 0 50px 0;}
+#contact #form { width:740px; margin-left:auto; margin-right:auto; }
+#form .email {width:100%; margin-bottom:10px; }
+#form .message {width:100%; height:200px; margin-bottom:10px;}
+#form .btn { background:var(--blue); font-size:16px; color:white; border-radius:25px; padding: 15px 30px; }
+#contact .feedback{ display:none; width:665px; color:var(--green); margin:0 auto; font-weight:400; }
 
-@media screen and (max-width: 850px) { 
-#contact {width:100%;}
-#contact .grandtitre {width:80%; font-size:40px; margin:80px auto 40px auto; }
-#form input, #form textarea {  width:90% !important; }
-#contact .feedback {  width:83%; }
-#form .message {width:90%; height:200px; }
+@media screen and (max-width: 800px) {
+#contact .grandtitre {width:35%; margin-right:10%; font-size:40px; }
+#contact #image {width:35%; }
+#form { width:90% !important; }
+#contact .feedback {  width:90%; }
 }
 
 /* footer ------------------------------------------------ */
