--- a/code/style.css
+++ b/code/style.css
@@ -195,17 +195,17 @@ select {cursor:pointer;}
 
 /* contact -------------------------------------------- */
 #contact input, #contact select, #contact textarea { -webkit-appearance: none; -moz-appearance: none; appearance: none; border:0; margin:0; font-family:'Roboto', Helvetica, Arial, sans-serif; padding:15px 15px; box-sizing: border-box; border-radius:10px; background:white; color: black; font-size:15px; font-weight:700; }
-#contact {width:100%; margin:0 auto; text-align:center;  }
-#contact .grandtitre { width:400px; vertical-align:middle; display:inline-block; margin-right:40px; text-align:left; font-size:65px; line-height: 110%; margin-bottom:10px;  }
-#contact #image {width:300px; display:inline-block; vertical-align:middle; margin:100px 0 50px 0;}
+#contact {width:100%; margin:100px auto; text-align:center;  }
+#contact .grandtitre { width:400px; vertical-align:middle; display:inline-block; margin-right:40px; text-align:left; font-size:65px; line-height: 110%;  }
+#contact #image {width:300px; display:inline-block; vertical-align:middle; }
 #contact #form { width:740px; margin-left:auto; margin-right:auto; }
-#form .email {width:100%; margin-bottom:10px; }
+#form .email {width:100%; margin:30px 0 10px 0; }
 #form .message {width:100%; height:200px; margin-bottom:10px;}
 #form .btn { background:var(--blue); font-size:16px; color:white; border-radius:25px; padding: 15px 30px; }
 #contact .feedback{ display:none; width:665px; color:var(--green); margin:0 auto; font-weight:400; }
 
 @media screen and (max-width: 800px) {
-#contact .grandtitre {width:35%; margin-right:10%; font-size:40px; }
+#contact .grandtitre {width:50%; margin-right:5%; font-size:9vw; }
 #contact #image {width:35%; }
 #form { width:90% !important; }
 #contact .feedback {  width:90%; }
