--- a/code/style.css
+++ b/code/style.css
@@ -196,7 +196,8 @@ select {cursor:pointer;}
 /* contact -------------------------------------------- */
 #contact input, #contact select, #contact textarea { -webkit-appearance: none; -moz-appearance: none; appearance: none; border:0; margin:0; font-family:'Roboto', Helvetica, Arial, sans-serif; padding:15px 15px; box-sizing: border-box; border-radius:10px; background:white; color: black; font-size:15px; font-weight:700; }
 #contact {width:100%; margin:100px auto; text-align:center;  }
-#contact .grandtitre { width:400px; vertical-align:middle; display:inline-block; margin-right:40px; text-align:left; font-size:65px; line-height: 110%;  }
+#contact .grandtitre { width:400px; vertical-align:middle; display:inline-block; margin-right:40px; text-align:left; font-size:65px; line-height: 105%;  }
+#contact .soustitre {font-size:18px; line-height:135%; margin-top:20px; }
 #contact #image {width:300px; display:inline-block; vertical-align:middle; }
 #contact #form { width:740px; margin-left:auto; margin-right:auto; }
 #form .email {width:100%; margin:30px 0 10px 0; }
