--- a/code/style.css
+++ b/code/style.css
@@ -146,20 +146,20 @@ select {cursor:pointer;}
 
 /* contact -------------------------------------------- */
 #contact input, #contact select, #contact textarea { -webkit-appearance: none; -moz-appearance: none; appearance: none; border:0; margin:0; font-family:'Roboto', Helvetica, Arial, sans-serif; padding:15px 15px; box-sizing: border-box; border-radius:10px; background:white; color: black; font-size:15px; font-weight:700; }
-#contact {width:100%; margin:100px auto; text-align:center;  }
-#contact .grandtitre { width:350px; vertical-align:middle; display:inline-block; margin-right:70px; font-size:55px; line-height: 105%;  }
-#contact #image {width:145px; display:inline-block; vertical-align:middle; }
+#contact {width:100%; margin:70px auto; text-align:center;  }
+#contact .grandtitre { width:400px; vertical-align:middle; display:inline-block; margin:50px 45px 50px 0; font-size:55px; line-height: 105%;  }
+#contact #image {width:145px; display:inline-block; vertical-align:middle; margin:30px 0; }
 #contact #form { width:650px; margin-left:auto; margin-right:auto; }
-#form .email {width:100%; margin:30px 0 10px 0; }
+#form .email {width:100%; margin:0 0 10px 0; }
 #form .message {width:100%; height:200px; margin-bottom:10px;}
 #form .btn { background:var(--blue); font-size:16px; color:white; border-radius:25px; padding: 15px 30px; }
 #contact .feedback{ display:none; width:665px; color:var(--green); margin:0 auto; font-weight:400; }
 #contact #form div {text-align:left; margin:25px 0; font-size:13px; font-weight:400; }
 
 @media screen and (max-width: 700px) {
-  #contact {margin-top:60px;}
-#contact .grandtitre {width:50%; margin-right:5%; font-size:9vw; }
-#contact #image {width:30%; }
+  #contact {margin-top:50px;}
+#contact .grandtitre {width:50%; margin:10% 5% 10% 0; font-size:9vw; }
+#contact #image {width:30%; margin:5% 0 5% 0; }
 #form { width:90% !important; }
 #contact .feedback {  width:90%; }
 }
