--- a/code/style.css
+++ b/code/style.css
@@ -13,7 +13,7 @@
   }
 
 /* global ------------------------------------------------- */
-:root{background:var(--dark);}
+:root{background:black;}
 body,html{ background-color: var(--dark); background: linear-gradient(rgb(255, 210, 215) 50px, var(--dark) 250px) ; color:white; font-family: 'Roboto', Helvetica, Arial, sans-serif; font-size:15px; font-weight:700; scroll-behavior: smooth; margin:0; padding:0; line-height: 155%;}
 a{color:white; text-decoration:none; cursor:pointer; }
 a:hover {cursor:pointer !important;}
@@ -149,7 +149,7 @@ select {cursor:pointer;}
 #contact input, #contact select, #contact textarea { -webkit-appearance: none; -moz-appearance: none; appearance: none; border:0; margin:0; font-family:'Roboto', Helvetica, Arial, sans-serif; padding:15px 15px; box-sizing: border-box; border-radius:10px; background:white; color: black; font-size:15px; font-weight:700; }
 #contact {width:100%; margin:20px auto -50px auto; text-align:center;  }
 #contact .grandtitre { width:400px; vertical-align:middle; display:inline-block; margin:50px 45px 50px 0; font-size:55px; line-height: 105%; text-shadow: rgba(0, 0, 0, 0.65) 0px 4px 14px;  }
-#contact #image {width:145px; display:inline-block; vertical-align:middle; margin:30px 0; }
+#contact #image {width:180px; display:inline-block; vertical-align:middle; margin:30px 0; }
 #contact #form { width:650px; margin-left:auto; margin-right:auto; }
 #form .email {width:100%; margin:0 0 10px 0; }
 #form .message {width:100%; height:200px; margin-bottom:10px;}
@@ -159,8 +159,8 @@ select {cursor:pointer;}
 
 @media screen and (max-width: 700px) {
   #contact {margin-top:0;}
-#contact .grandtitre {width:50%; margin:10% 5% 10% 0; font-size:9vw; }
-#contact #image {width:30%; margin:5% 0 5% 0; }
+#contact .grandtitre {width:55%; margin:10% 5% 10% 0; font-size:9vw; }
+#contact #image {width:25%; margin:5% 0 5% 0; }
 #form { width:90% !important; }
 #contact .feedback {  width:90%; }
 }
